--- a/github/src/main/resources/application.yml
+++ b/github/src/main/resources/application.yml
@@ -85,6 +85,15 @@ twitter:
   resource:
     # https://dev.twitter.com/rest/reference/get/users/lookup
     userInfoUri: https://api.twitter.com/1.1/users/lookup.json
+linkedin:
+  client:
+    clientId: 81om4awiw4mdd0
+    clientSecret: b688lpVpilUSLxzG
+    accessTokenUri: https://www.linkedin.com/oauth/v2/accessToken
+    userAuthorizationUri: https://www.linkedin.com/oauth/v2/authorization
+    clientAuthenticationScheme: form
+  resource:
+    userInfoUri: https://api.linkedin.com/v1/people/~?format=json
 
 logging:
   level:
