--- a/simple/src/main/resources/application.yml
+++ b/simple/src/main/resources/application.yml
@@ -1,29 +1,14 @@
 security:
   oauth2:
     client:
-      clientId: 678181184380-2o32hl7oj76qacfhvt0pbkpq2fctp4ct.apps.googleusercontent.com
-      clientSecret: PAPXFtx7V5wbRmX63WI9273O
-      accessTokenUri: https://accounts.google.com/o/oauth2/token
-#      accessTokenUri: https://www.googleapis.com/oauth2/v4/token
-      userAuthorizationUri: https://accounts.google.com/o/oauth2/auth
-#      userAuthorizationUri: https://accounts.google.com/o/oauth2/v2/auth
-      tokenName: authorization_code
-      scope:
-        - openid
-        - email
-        - profile
+      #clientId: 233668646673605
+      #clientSecret: 33b17e044ee6a4fa383f46ec6e28ea1d
+      clientId: 1873822012871140
+      clientSecret: 919c7d7f811b7c50f08846292e7e3489
+      accessTokenUri: https://graph.facebook.com/oauth/access_token
+      userAuthorizationUri: https://www.facebook.com/dialog/oauth
+      tokenName: oauth_token
       authenticationScheme: query
       clientAuthenticationScheme: form
-      preEstablishedRedirectUri: http://localhost:8080/login
     resource:
-      userInfoUri: https://www.googleapis.com/auth/plus.me
-#      userInfoUri: https://www.googleapis.com/oauth2/v2/userinfo
-#      userInfoUri: https://www.googleapis.com/oauth2/v3/userinfo
-      preferTokenInfo: true
-
-logging.level:
-  org.apache.http: DEBUG
-  org.apache.http.wire: DEBUG
-  org.springframework.web.client: TRACE
-  org.springframework.web.client.RestTemplate: TRACE
-  org.springframework.boot.autoconfigure.security.oauth2: DEBUG
+      userInfoUri: https://graph.facebook.com/me
